--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bun-plugin-tailwind": "^0.0.15",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "prettier": "^3.6.2",
     "react": "^19",
     "react-dom": "^19",
     "tailwindcss": "^4.1.11"
